samples/_failures_safe/1761432207_db10b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56ec086a.c: In function ‘main’:
./samples/SAFE/__tmp_56ec086a.c:145:25: error: expected ‘)’ at end of input
  145 |     analyze_logs(entries
      |                 ~       ^
      |                         )
./samples/SAFE/__tmp_56ec086a.c:145:5: error: too few arguments to function ‘analyze_logs’
  145 |     analyze_logs(entries
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_56ec086a.c:88:6: note: declared here
   88 | void analyze_logs(struct log_entry* entries, int count) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_56ec086a.c:145:5: error: expected declaration or statement at end of input
  145 |     analyze_logs(entries
      |     ^~~~~~~~~~~~
